--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rollup/plugin-typescript": "^11.1.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.10.0",
+    "execa": "^8.0.1",
     "jest": "^29.5.0",
     "prettier": "^3.0.3",
     "rollup": "^3.21.5",
