--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "description": "vue3基础实现",
   "main": "dist/tool.js",
-  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js"
@@ -21,16 +20,8 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.1",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.10.0",
     "execa": "^8.0.1",
-    "jest": "^29.5.0",
     "prettier": "^3.0.3",
-    "rollup": "^3.21.5",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "ts-jest": "^29.1.0",
-    "tslib": "^2.5.2",
-    "typescript": "^5.0.4"
+    "rollup": "^3.21.5"
   }
 }
